--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Your Name</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
 <body>
-  <h1>Your Name</h1>
-  <p>I build and learn about payment systems.</p>
+
+  <header>
+    <h1>Anirudh Gupta</h1>
+    <p>I build and learn about payment systems and automation.</p>
+  </header>
+
+  <main>
+
+    <section>
+      <h2>What I am building</h2>
+      <ul>
+        <li>Expense Manager using email parsing and automation</li>
+        <li>Payment flow breakdowns to understand how money actually moves</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Notes and learnings</h2>
+      <ul>
+        <li>UPI Lite looks like a wallet but behaves very differently underneath</li>
+        <li>Why “payment successful” does not always mean money settled</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Links</h2>
+      <ul>
+        <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+        <li><a href="https://github.com/aniguptm-hub">GitHub</a></li>
+      </ul>
+    </section>
+
+  </main>
+
 </body>
-</html>
