--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
   <header>
     <h1>Anirudh Gupta</h1>
-    <p>I build and learn about payment systems and automation.</p>
+    <p>I work on payment systems, documenting how real financial products behave beyond the UI.</p>
   </header>
 
   <main>
