--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section>
       <h2>Links</h2>
       <ul>
-        <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+        <li><a href="https://www.linkedin.com/in/aniguptm/</a></li>
         <li><a href="https://github.com/aniguptm-hub">GitHub</a></li>
       </ul>
     </section>
