--- a/index.html
+++ b/index.html
@@ -16,6 +16,36 @@
     </section>
 
     <section>
+  <h2>Expense Manager. Learning by building</h2>
+
+  <p>
+    I am building a personal expense manager to understand how financial data can be
+    parsed, categorized, and corrected automatically without relying on bank APIs.
+  </p>
+
+  <h3>The problem</h3>
+  <p>
+    Most expense trackers depend on delayed bank sync or manual entry.
+    Email and notification data exists in real time, but it is noisy, inconsistent,
+    and easy to misclassify.
+  </p>
+
+  <h3>What I am building</h3>
+  <ul>
+    <li>Email ingestion to capture transaction-related messages</li>
+    <li>Parsing logic to extract amount, merchant, and transaction type</li>
+    <li>Basic categorization with room for manual correction</li>
+  </ul>
+
+  <h3>What I am learning</h3>
+  <ul>
+    <li>Why financial data is messy even when it looks structured</li>
+    <li>How small edge cases break naive automation</li>
+    <li>Why user overrides are as important as automatic rules</li>
+  </ul>
+</section>
+
+    <section>
       <h2>Notes and learnings</h2>
       <ul>
         <li>UPI Lite looks like a wallet but behaves very differently underneath</li>
