--- a/index.html
+++ b/index.html
@@ -23,12 +23,18 @@
     parsed, categorized, and corrected automatically without relying on bank APIs.
   </p>
 
-  <h3>The problem</h3>
-  <p>
-    Most expense trackers depend on delayed bank sync or manual entry.
-    Email and notification data exists in real time, but it is noisy, inconsistent,
-    and easy to misclassify.
-  </p>
+  <<h3>The problem</h3>
+<p>
+Most expense managers require direct access to bank accounts or centralized databases.
+While convenient, this creates a large trust and security surface where highly sensitive
+financial data is continuously stored outside the user’s control.
+</p>
+<p>
+I wanted to explore whether expense tracking could be built using data the user already
+receives. such as transaction emails and notifications. without sharing bank credentials
+or relying on permanent account access.
+</p>
+
 
   <h3>What I am building</h3>
   <ul>
